# PentOS

./: Cargo.toml  LICENSE  Makefile  README.MD  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
acpi/: Cargo.toml
acpi/src/: lib.rs  table.rs
acpi/src/table/: fadt.rs  gas.rs  header.rs  madt.rs  rsdp.rs  xsdt.rs
boot-protocol/: Cargo.toml
boot-protocol/src/: acpi.rs  features.rs  framebuffer.rs  kernel_meta.rs  lib.rs  topology.rs
bootloader/: Cargo.toml  build.rs
bootloader/.cargo/: config.toml
bootloader/src/: acpi.rs  allocator.rs  bootstage.rs  entry.rs  features.rs  framebuffer.rs  infoarea.rs  kernel.rs  logger.rs  main.rs  misc.rs  mmap.rs  mp.rs  panic.rs  phys_mmap.rs  pic.rs  pit.rs  topology.rs  virt_mmap.rs
bootloader/src/acpi/: madt.rs  xsdt.rs
bootloader/src/allocator/: postboot.rs  preboot.rs
bootloader/src/mp/: ap_init.asm
builder/: Cargo.toml
builder/src/: lib.rs
chef/: Cargo.toml
chef/src/: args.rs  cargo.rs  config.rs  main.rs  progress.rs  qemu.rs  utils.rs
common/: Cargo.toml
common/src/: collections.rs  debug.rs  lib.rs  mem.rs
common/src/collections/: smallvec.rs
common/src/mem/: addr.rs  frame.rs  region.rs  size.rs
common/src/mem/addr/: phys.rs  test.rs  virt.rs
common/src/mem/addr/phys/: test.rs
common/src/mem/frame/: size.rs
common/src/mem/region/: test.rs
common/src/mem/size/: test.rs
config/: Cargo.toml
config/src/: lib.rs  pmem.rs  topology.rs  vmem.rs
config/src/topology/: hart.rs
elf/: Cargo.toml
elf/src/: headers.rs  lib.rs  types.rs
kernel/: Cargo.toml  build.rs  kernel.json  link.ld
kernel/.cargo/: config.toml
kernel/src/: entry.rs  main.rs  panic.rs
mman/: Cargo.toml
mman/src/: kshared.rs  lib.rs  phys.rs  sysinfo.rs
mman/src/phys/: lowmem.rs
scripts/: debug.sh  gdb.py  gdb.rc  tmux.rc
snail/: Cargo.toml
snail/src/: cargo.rs  lib.rs  qemu.rs
spinlocks/: Cargo.toml
spinlocks/src/: lib.rs  mutex.rs  once.rs  rwlock.rs
targets/: kernel.json  uefi.json
x64/: Cargo.toml
x64/src/: framebuffer.rs  hart.rs  interrupts.rs  io.rs  lapic.rs  lib.rs  mem.rs  msr.rs  prot.rs
x64/src/interrupts/: gate.rs  stackframe.rs
x64/src/mem/: addr.rs  frame.rs  page.rs  paging.rs  region.rs  segmentation.rs  size.rs
x64/src/mem/addr/: phys.rs  test.rs  virt.rs
x64/src/mem/frame/: size.rs
x64/src/mem/page/: size.rs
x64/src/mem/paging/: absent_entry.rs  flush.rs  map_entry.rs  pat.rs  pcid.rs  pk.rs  raw_entry.rs  ref_entry.rs  root_entry.rs  test.rs
x64/src/mem/region/: test.rs
x64/src/mem/segmentation/: descriptor.rs  selector.rs
x64/src/mem/size/: test.rs
x64/src/msr/: apic_base.rs  efer.rs  pat.rs
