[workspace]
members = [
    "kernel",
    "bootloader",
    "chef",
    "boot-protocol",
    "snail",
    "builder",
    "common",
    "elf",
]
resolver = "3"

package.edition = "2024"
package.license = " GPL-3.0-or-later"
package.authors = ["Youssef Harmal"]

[workspace.dependencies]
log = "0.4.26"
boot-protocol = { path = "boot-protocol" }
common = { path = "common" }
elf = { path = "elf" }
snail = { path = "snail" }
builder = { path = "builder" }

[workspace.metadata.chef]
ovmf-source = "https://github.com/rust-osdev/ovmf-prebuilt/releases/download/edk2-stable202408.01-r1/edk2-stable202408.01-r1-bin.tar.xz"

install-bootloader = "/boot/efi/pentos.efi"
