[package]
name = "bootloader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
uefi = { version = "0.34.1" }
log.workspace = true
boot-protocol.workspace = true
x64.workspace = true
elf.workspace = true
spinlocks.workspace = true
acpi.workspace = true
config.workspace = true
common.workspace = true

[features]
default = ["log-debugcon"]
log-debugcon = []
