[package]
name = "chef"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = "0.19.2"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.14", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
xz = "0.1.0"
snail.workspace = true
